force-app/main/default/objects/R360_Portfolio__c/R360_Portfolio__c.object-meta.xml
<CustomObject><deploymentStatus>Deployed</deploymentStatus><description>Effective account and delivery portfolio hierarchy.</description><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSharing>true</enableSharing><externalSharingModel>Private</externalSharingModel><label>Resource 360 Portfolio</label><nameField><label>Portfolio Name</label><type>Text</type></nameField><pluralLabel>Resource 360 Portfolios</pluralLabel><sharingModel>Private</sharingModel><visibility>Public</visibility></CustomObject>