force-app/main/default/objects/R360_Portfolio__c/fields/Account__c.field-meta.xml
<CustomField><fullName>Account__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Account</label><referenceTo>Account</referenceTo><relationshipLabel>Resource 360 Portfolios</relationshipLabel><relationshipName>Resource360_Portfolios</relationshipName><type>Lookup</type></CustomField>