force-app/main/default/objects/R360_Portfolio__c/fields/Owner_User__c.field-meta.xml
<CustomField><fullName>Owner_User__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Owner User</label><referenceTo>User</referenceTo><relationshipLabel>Owned Resource 360 Portfolios</relationshipLabel><relationshipName>Owned_Resource360_Portfolios</relationshipName><type>Lookup</type></CustomField>