force-app/main/default/objects/R360_Portfolio__c/fields/Parent_Portfolio__c.field-meta.xml
<CustomField><fullName>Parent_Portfolio__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Parent Portfolio</label><referenceTo>R360_Portfolio__c</referenceTo><relationshipLabel>Child Portfolios</relationshipLabel><relationshipName>Child_Portfolios</relationshipName><type>Lookup</type></CustomField>