force-app/main/default/objects/R360_Portfolio__c/fields/Portfolio_ID__c.field-meta.xml
<CustomField><fullName>Portfolio_ID__c</fullName><caseSensitive>false</caseSensitive><externalId>true</externalId><label>Portfolio ID</label><length>80</length><required>true</required><type>Text</type><unique>true</unique></CustomField>